# cosmere-rpg-beast-extractor

./: .gitignore  Cargo.toml  README.md  index.html
.cargo/: config.toml
.github/workflows/: website.yaml
obsidian-fantasy-statblocks/: Layout.json  README.md  Style.css
src/: cli.rs  icon_map.yaml  lib.rs  main.rs  pdf.rs  structure.rs  test_copyrighted.rs  text.rs  web.rs
