[package]
name = "extract-beasts"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["full"] }
euclid = "0.20.14"
hayro-syntax = "0.5.0"
indexmap = "2.13.0"
itertools = "0.14.0"
nom = "8"
nom-language = "0.1.0"
pdf-extract = { git = "https://github.com/jrmuizel/pdf-extract", branch = "hayro" }
# pdf-extract.path = "../../../../Rust/pdf-extract"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"

[dev-dependencies]
insta = { version = "1.47.2", features = ["yaml"] }

[lints.rust]
mismatched_lifetime_syntaxes = "allow"
